[gd_scene load_steps=3 format=3 uid="uid://dl0757nohnrx0"]

[ext_resource type="Script" path="res://assets/players/camera/camera.gd" id="1_3l68r"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pinnh"]
height = 14.7598
radius = 6.2828

[node name="camera_controller" type="Node3D"]
script = ExtResource("1_3l68r")

[node name="camera_target" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.989181, 0.146704, 0, -0.146704, 0.989181, 0, 1.37847, 7.10225)

[node name="Camera3D" type="Camera3D" parent="camera_target"]

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.107, 7.102)
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00448647, -0.968632, -2.1084)
shape = SubResource("CylinderShape3D_pinnh")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
